--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <div class="col-md-12">
         <h1 class="text-center text-uppercase mb-4 text-black">Whiteboard</h1>
       </div> 
+      <div class="text-uppercase" id="footer">
+        </div>
     </div>
     <div class="row flex-spaces child-borders child-shadows-hover" style="height: 600px;">
         <div class="col-md-12">
             <div class="note" id="notepad" style="margin-top: 20px;" contenteditable></div>
-            <div class="text-uppercase mb-4" id="footer">
-            </div>
+           
           </div>
     </div>
     <div class="row text-center text-uppercase">
