added focus on load

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           if (data) {
             document.querySelector('#notepad').innerHTML = data;
           }
+          footer.focus();
         });
       });
       function timeout() {
