--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
         // Read UTF8 text file
         var footer = document.getElementById("footer").in;
         fs.readFile('/note', 'utf8', function (err, data) {
+          const elem=document.querySelector("#footer");
           if (err) {
             document.querySelector('#notepad').innerHTML = 'Lets Take Notes!';
           }
           if (data) {
             document.querySelector('#notepad').innerHTML = data;
           }
-          footer.focus();
+          elem.focus();
         });
       });
       function timeout() {
